--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_home"
-        android:title="主页"
-        android:icon="@drawable/icons"/>
+        android:title="习惯打卡"
+        android:icon="@drawable/ic_menu_mark"/>
     <item
         android:id="@+id/nav_schedule"
-        android:title="日程"
+        android:title="日程管理"
         android:icon="@drawable/icons"/>
     <item
         android:id="@+id/nav_habit"
-        android:title="习惯"
+        android:title="番茄时钟"
         android:icon="@drawable/icons"/>
     <item
         android:id="@+id/nav_profile"
-        android:title="我的"
+        android:title="数据统计"
         android:icon="@drawable/icons"/>
     <item
         android:id="@+id/nav_setting"
-        android:title="设置"
+        android:title="个人中心"
         android:icon="@drawable/icons"/>
 </menu>
