--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Desine" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Design" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
     </style>
 
-    <style name="Theme.Desine" parent="Base.Theme.Desine" />
+    <style name="Theme.Design" parent="Base.Theme.Design" />
 </resources>
