--- a/app/src/main/res/layout/fragment_schedule_main.xml
+++ b/app/src/main/res/layout/fragment_schedule_main.xml
@@ -77,7 +77,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="100dp"
         android:contentDescription="添加新任务"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="#5E97F6"
