--- a/app/src/main/res/layout/fragment_schedule_works.xml
+++ b/app/src/main/res/layout/fragment_schedule_works.xml
@@ -95,7 +95,9 @@
         android:id="@+id/fab_add_schedule"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="100dp"
+
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="#5E97F6"
         app:tint="@android:color/white"
