--- a/app/src/main/res/layout/fragment_schedule_main.xml
+++ b/app/src/main/res/layout/fragment_schedule_main.xml
@@ -81,7 +81,7 @@
         android:layout_marginBottom="100dp"
         android:contentDescription="添加新任务"
         android:src="@android:drawable/ic_input_add"
-        app:backgroundTint="#5E97F6"
+        app:backgroundTint="#4B76B8"
         app:fabSize="normal"
         app:tint="@android:color/white"/>
 
