--- a/app/src/main/res/layout/login_subpage_forget.xml
+++ b/app/src/main/res/layout/login_subpage_forget.xml
@@ -103,7 +103,7 @@
                     android:id="@+id/confirm_new_password_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="确认新密码"
+                    android:hint="@string/confirom_pwd"
                     android:layout_marginTop="16dp"
                     app:startIconDrawable="@drawable/ic_lock"
                     app:passwordToggleEnabled="true"
@@ -121,7 +121,7 @@
                     android:id="@+id/submit_new_password_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="提交新密码"
+                    android:text="@string/new_pwd"
                     android:textSize="16sp"
                     android:layout_marginTop="32dp"
                     app:cornerRadius="8dp"
@@ -134,7 +134,7 @@
                     android:id="@+id/exit_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="退出"
+                    android:text="@string/exit"
                     android:textSize="16sp"
                     android:layout_marginTop="16dp"
                     app:cornerRadius="8dp"
