--- a/app/src/main/res/layout/sub_shedule_work_item.xml
+++ b/app/src/main/res/layout/sub_shedule_work_item.xml
@@ -46,14 +46,14 @@
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="编辑"/>
+                android:text="@string/edit"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_complete"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="完成"/>
+                android:text="@string/finish"/>
         </LinearLayout>
     </LinearLayout>
 
