--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -14,7 +14,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="编辑个人信息"
+        android:text="@string/edit_infom_privice"
         android:textSize="28sp"
         android:textStyle="bold"
         android:textColor="#2196F3"
@@ -49,7 +49,7 @@
             android:id="@+id/editText_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="用户名"
+            android:hint="@string/user_name"
             android:textSize="16sp"
             android:textColor="#424242"
             android:padding="16dp" />
@@ -73,7 +73,7 @@
             android:id="@+id/editText_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="新密码（可选）"
+            android:hint="@string/new_password_op"
             android:inputType="textPassword"
             android:textSize="16sp"
             android:textColor="#424242"
@@ -123,7 +123,7 @@
             android:id="@+id/editText_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="电话"
+            android:hint="@string/phone"
             android:inputType="phone"
             android:textSize="16sp"
             android:textColor="#424242"
@@ -148,7 +148,7 @@
             android:id="@+id/editText_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="邮箱"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textSize="16sp"
             android:textColor="#424242"
@@ -160,7 +160,7 @@
         android:id="@+id/button_save"
         android:layout_width="0dp"
         android:layout_height="56dp"
-        android:text="保存修改"
+        android:text="@string/save_regist"
         android:textSize="16sp"
         android:textStyle="bold"
         android:textAllCaps="false"
