--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,7 +142,7 @@
                 android:id="@+id/forgot_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="忘记密码"
+                android:text="@string/forget_passwd"
                 android:textColor="#666666"
                 android:padding="8dp"/>
 
