--- a/app/src/main/res/layout/fragment_schedule_main.xml
+++ b/app/src/main/res/layout/fragment_schedule_main.xml
@@ -50,7 +50,7 @@
                         android:id="@+id/task_list_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="今日任务"
+                        android:text="@string/today_tasks"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:layout_marginBottom="12dp"/>
@@ -81,9 +81,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="100dp"
-        android:contentDescription="添加新任务"
+        android:layout_margin="20dp"
+        android:contentDescription="@string/add_new_task"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="#4B76B8"
         app:fabSize="normal"
