--- a/app/src/main/res/layout/fragment_tomato.xml
+++ b/app/src/main/res/layout/fragment_tomato.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:text="专注时钟"
+        android:text="@string/tomato_time"
         android:textColor="#333333"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -93,10 +93,10 @@
         <!-- 开始/暂停按钮 -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_start_pause"
-            android:layout_width="120dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
             android:layout_marginEnd="16dp"
-            android:text="开始"
+            android:text="@string/start"
             android:textSize="16sp"
             android:textStyle="bold"
             app:cornerRadius="25dp"
@@ -107,9 +107,9 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_stop"
             style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="120dp"
+            android:layout_width="130dp"
             android:layout_height="50dp"
-            android:text="结束"
+            android:text="@string/finish"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="#FF5252"
